--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ rabbitmq.username=guest
 rabbitmq.password=guest
 
 # Configuracoes do MinIO
-#quarkus.minio.url=http://localhost:9002
-#quarkus.minio.access-key=minioadmin
-#quarkus.minio.secret-key=minioadmin
-#minio.bucket-name=osinfo
+quarkus.minio.url=http://localhost:9002
+quarkus.minio.access-key=minioadmin
+quarkus.minio.secret-key=minioadmin
+minio.bucket-name=osinfo
 
 # Evitar a criacao de novos containers
 quarkus.devservices.enabled=false
